routing and login page

--- a/AngularHealthHubP2/src/app/login/login.component.html
+++ b/AngularHealthHubP2/src/app/login/login.component.html
@@ -1,1 +1,21 @@
-<p>login works!</p>
+<body>
+    <div>
+        <!-- make a loginForm -->
+
+        <form action="loginForm" method="post">
+        <table>
+            <tr>
+                <td>Email:</td>
+                <td><input type="text" name="email" id="email"></td>
+            </tr>
+            <tr>
+                <td>Password:</td>
+                <td><input type="password" name="password" id="password"></td>
+            </tr>
+            <tr>
+                <td><button>Login</button></td>
+            </tr>
+        </table>
+    </form>
+    </div>
+</body>
