--- a/AngularHealthHubP2/src/app/login/login.component.html
+++ b/AngularHealthHubP2/src/app/login/login.component.html
@@ -7,14 +7,14 @@
         <table>
             <tr>
                 <td>Email:</td>
-                <td><input [(ngModel)]="loginEmail" id="email"></td>
+                <td><input type ="email" [(ngModel)]="loginEmail" id="email"></td>
             </tr>
             <tr>
                 <td>Password:</td>
-                <td><input type="password" name="password" id="password"></td>
+                <td><input type="password" [(ngModel)]="loginPassword" id="password"></td>
             </tr>
             <tr>
-                <td><button (click) = "LoginButton()">Login</button></td>
+                <td><button (click) = "LoginButton(loginEmail, loginPassword)">Login</button></td>
             </tr>
         </table>
     <!-- </form> -->
